--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>互仲科技 • 业务后台管理系统</title>
   </head>
   <body>
+    <script src="./static/tinymce4.7.5/tinymce.min.js"></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
