--- a/index.prod.html
+++ b/index.prod.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="./static/favicon.ico" type="image/x-icon">
     <title>互仲科技 • 业务后台管理系统</title>
+    <script src="https://cdn.bootcss.com/vue/2.5.2/vue.min.js"></script>
+    <script src="https://cdn.bootcss.com/element-ui/2.3.7/index.js"></script>
   </head>
   <body>
     <script async src="./static/tinymce4.7.5/tinymce.min.js"></script>
