--- a/index.prod.html
+++ b/index.prod.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="./static/favicon.ico" type="image/x-icon">
+    <!-- 兼容性 meta start -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="renderer" content="webkit"> 
+    <!-- 兼容性 meta end -->
     <title>互仲科技 • 业务后台管理系统</title>
     <!-- 首屏加载样式 -->
     <style>
