--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="shortcut icon" href="./static/favicon.ico" type="image/x-icon">
     <!-- 兼容性 meta start -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="renderer" content="webkit"> 
+    <meta name="renderer" content="webkit">
     <!-- 兼容性 meta end -->
     <title>互仲科技 • 业务后台管理系统</title>
+    <script src="" type="text/javascript"></script>
     <!-- 首屏加载样式 -->
     <style>
       html, body, #app {
@@ -155,7 +156,7 @@
         </div>
       </div>
     <script async src="./static/tinymce4.7.5/tinymce.min.js"></script>
-    
+
     <!-- built files will be auto injected -->
   </body>
 </html>
