--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <!-- 兼容性 meta start -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="renderer" content="webkit">
+
+    <!-- 百度富文本 相关引入 -->
+    <link href="./static/umeditor-1.2.3/css/umeditor.css" type="text/css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="./static/umeditor-1.2.3/template.min.js"></script>
+    <script type="text/javascript" src="./static/umeditor-1.2.3/umeditor.config.js"></script>
+    <script type="text/javascript" src="./static/umeditor-1.2.3/umeditor.min.js"></script>
+    <script type="text/javascript" src="./static/umeditor-1.2.3/zh-cn/zh-cn.js"></script>
+
     <!-- 兼容性 meta end -->
     <title>互仲科技 • 业务后台管理系统</title>
     <!-- 首屏加载样式 -->
@@ -155,7 +164,7 @@
         </div>
       </div>
     <script async src="./static/tinymce4.7.5/tinymce.min.js"></script>
-
+    
     <!-- built files will be auto injected -->
   </body>
 </html>
