--- a/index.html
+++ b/index.html
@@ -9,14 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="renderer" content="webkit">
   <!-- 首屏加载样式 -->
-  <link rel="stylesheet" href="./static/global.css">
-  <!-- 百度富文本 UM 相关引入 -->
-  <!-- <link href="./static/umeditor-1.2.3/css/umeditor.css" type="text/css" rel="stylesheet"> -->
-  <!-- <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script> -->
-  <!-- <script type="text/javascript" src="./static/umeditor-1.2.3/template.min.js"></script> -->
-  <!-- <script type="text/javascript" src="./static/umeditor-1.2.3/umeditor.config.js"></script> -->
-  <!-- <script type="text/javascript" src="./static/umeditor-1.2.3/umeditor.min.js"></script> -->
-  <!-- <script type="text/javascript" src="./static/umeditor-1.2.3/zh-cn/zh-cn.js"></script> -->
+  <link type="text/css" rel="stylesheet" href="./static/global.css">
 
   <!-- 百度富文本 UE 相关引入 -->
   <script type="text/javascript" src="./static/ueditor/ueditor.config.js"></script>
@@ -28,11 +21,10 @@
   <title>互仲科技 • 业务后台管理系统</title>
 
   <!-- 首屏加载逻辑 -->
-  <script>
-    setTimeout(function () {
+  <script type="text/javascript">
+    setTimeout(() => {
       document.querySelector('#app').className = '';
     }, 0);
-
   </script>
 </head>
 
@@ -57,7 +49,7 @@
   <script async src="./static/tinymce4.7.5/tinymce.min.js"></script>
 
   <!-- built files will be auto injected -->
-  <script src="/static/js/vendor.dll.js"></script>
+  <script type="text/javascript" src="/static/js/vendor.dll.js"></script>
 </body>
 
 </html>
