浏览器 更新提示

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   <!--pdfjs引入-->
   <script type="text/javascript" src="./static/pdfjs/build/pdf.js"></script>
   <script type="text/javascript" src="./static/pdfjs/build/pdf.worker.js"></script>
+
+  <!-- 推荐浏览器 提示 -->
+  <script type="text/javascript" src="./static/js/browserUpgradeHints.js"></script>
   
   <!-- 兼容性 meta end -->
   <title>互仲科技 • 业务后台管理系统</title>
